base-2/apps/api/lh-communication-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicelhcommunicationapi
spec:
  selector:
    app: deploylhcommunicationapi
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31800
